--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('https://venivediveci.com/img/linhua.JPG');"></div>
-      <meta itemprop="image" content="https://venivediveci.com/img/linhua.JPG">
+      <div class="portrait" style="background-image: url('https://venivediveci.com/img/bubbles.jpg');"></div>
+      <meta itemprop="image" content="https://venivediveci.com/img/bubbles.jpg">
       
 
       <div class="portrait-title">
