--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('/img/bubbles.jpg');"></div>
-      <meta itemprop="image" content="/img/bubbles.jpg">
+      <div class="portrait" style="background-image: url('/img/linhua.jpg');"></div>
+      <meta itemprop="image" content="/img/linhua.jpg">
       
 
       <div class="portrait-title">
