--- a/404.html
+++ b/404.html
@@ -252,11 +252,15 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="https://venivediveci.com/project/deep-learning/">Deep Learning</a></li>
+    <li><a href="https://venivediveci.com/project/everyone-is-van-gogh/">Everyone Is Van Gogh</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://venivediveci.com/project/example-external-project/">External Project</a></li>
+    <li><a href="https://venivediveci.com/project/yolo-v1-implementation/">Everyone Is Van Gogh</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://venivediveci.com/project/resnet-keras-implementation/">ResNet Keras implementation</a></li>
   </ul>
   
   
