--- a/404.html
+++ b/404.html
@@ -256,11 +256,11 @@
   </ul>
   
   <ul>
-    <li><a href="https://venivediveci.com/project/yolo-v1-implementation/">Everyone Is Van Gogh</a></li>
+    <li><a href="https://venivediveci.com/project/resnet-keras-implementation/">ResNet Keras implementation</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://venivediveci.com/project/resnet-keras-implementation/">ResNet Keras implementation</a></li>
+    <li><a href="https://venivediveci.com/project/yolo-v1-implementation/">YOLO v1 implementation</a></li>
   </ul>
   
   
