--- a/index.html
+++ b/index.html
@@ -313,8 +313,9 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I am currently a postgraduate student of computer science at <a href="http://www.nlpr.ia.ac.cn/nlpren/EN/volumn/home.shtml" target="_blank">National Laboratory of Pattern Recognition</a>, <a href="http://english.ia.cas.cn/" target="_blank">Institute of Automation</a>,<a href="http://english.cas.cn/" target="_blank">Chinese Academy of Sciences</a>, advised by Prof. <a href="http://www.escience.cn/people/panchunhong/groupmember.html" target="_blank">Chunhong Pan</a>.Previously, I received my BS degree in Automation from <a href="http://www.csu.edu.cn/" target="_blank">Central South University</a>.My CV can be found [here]().
-I am focussing on the algorithms for Object Detection now.I aim at contributing to build up knowledge and improve the development of artificial intelligence technology in the world. We are living at the right time when the evolution of artificial intelligence technology accelerates, and I believe this will improve people&rsquo;s living standards.</p>
+<p>I am currently a postgraduate student of computer science at <a href="http://www.nlpr.ia.ac.cn/nlpren/EN/volumn/home.shtml" target="_blank">National Laboratory of Pattern Recognition</a>, <a href="http://english.ia.cas.cn/" target="_blank">Institute of Automation</a>,<a href="http://english.cas.cn/" target="_blank">Chinese Academy of Sciences</a>, advised by Prof. <a href="http://www.escience.cn/people/panchunhong/groupmember.html" target="_blank">Chunhong Pan</a>.Previously, I received my BS degree in Automation from <a href="http://www.csu.edu.cn/" target="_blank">Central South University</a>.
+I am focussing on the algorithms for Object Detection now.I aim at contributing to build up knowledge and improve the development of artificial intelligence technology in the world. We are living at the right time when the evolution of artificial intelligence technology accelerates, and I believe this will improve people&rsquo;s living standards.
+My CV can be found <a href="https://github.com/smartape/smartape.github.io/blob/master/cv.pdf" target="_blank">here</a>.</p>
 
 
     <div class="row">
